samples/_failures_safe/1761143137_f42a4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13aa003b.c: In function ‘next_token’:
./samples/SAFE/__tmp_13aa003b.c:153:9: error: expected identifier or ‘(’ at end of input
  153 |         char
      |         ^~~~
./samples/SAFE/__tmp_13aa003b.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13aa003b.c:153:9: error: expected declaration or statement at end of input
